NavigationBar z-Index fixed

--- a/src/components/ui/NavigationBar/NavigationBar.sass
+++ b/src/components/ui/NavigationBar/NavigationBar.sass
@@ -9,17 +9,14 @@ nav
         margin-right: 15px
         @media screen and ( max-width: 900px )
             margin-right: 0px
-            
+
     .nav-tabs
         border-bottom: 5px solid rgb(64, 75, 105)
-        z-index: 1000 !important
     .nav-link.active
-        z-index: 1000 !important
         color: #ffffff !important
         border: 0px !important
         background: rgb(64, 75, 105) !important
     .nav-link
-        z-index: 1000 !important
         color: white !important
         border: 0px !important
         FontAwesomeIcon
